[project]
name = "memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime>=4.9.3",
    "blobfile>=3.0.0",
    "datatrove>=0.5.0",
    "fsspec>=2025.7.0",
    "lm-eval>=0.4.0",
    "msgspec>=0.19.0",
    "ninja>=1.11.1.4",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "orjson>=3.11.1",
    "pynvml>=12.0.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scipy>=1.16.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch==2.5.0",
    "viztracer>=1.0.4",
    "wandb>=0.21.0",
    "xformers>=0.0.28.post2",
]
